--- a/package.json
+++ b/package.json
@@ -6,8 +6,10 @@
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
+    "adm-zip": "^0.5.9",
     "bootstrap": "^5.2.0",
     "constants-browserify": "^1.0.0",
+    "framer-motion": "^7.0.0",
     "iexec": "^7.2.1",
     "react": "^18.2.0",
     "react-bootstrap": "^2.4.0",
@@ -16,6 +18,7 @@
     "react-scripts": "5.0.1",
     "recharts": "^2.1.13",
     "recoil": "^0.7.4",
+    "unzipit": "^1.4.0",
     "web-vitals": "^2.1.4",
     "web3": "^1.7.5"
   },
@@ -49,7 +52,6 @@
     "crypto-browserify": "^3.12.0",
     "https-browserify": "^1.0.0",
     "os-browserify": "^0.3.0",
-    "process": "^0.11.10",
     "react-app-rewired": "^2.2.1",
     "stream-browserify": "^3.0.0",
     "stream-http": "^3.2.0",
