--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "iexec": "^7.2.1",
     "react": "^18.2.0",
     "react-bootstrap": "^2.4.0",
+    "react-code-blocks": "^0.0.9-0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
