--- a/package.json
+++ b/package.json
@@ -15,10 +15,12 @@
     "react-bootstrap": "^2.4.0",
     "react-code-blocks": "^0.0.9-0",
     "react-dom": "^18.2.0",
+    "react-loader-spinner": "^5.1.7-beta.1",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "recharts": "^2.1.13",
     "recoil": "^0.7.4",
+    "uniqid": "^5.4.0",
     "unzipit": "^1.4.0",
     "web-vitals": "^2.1.4",
     "web3": "^1.7.5"
