--- a/package.json
+++ b/package.json
@@ -2,7 +2,9 @@
   "name": "predictme-web",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://predictme.github.io",
   "dependencies": {
+    "-": "^0.0.1",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
@@ -10,6 +12,7 @@
     "bootstrap": "^5.2.0",
     "constants-browserify": "^1.0.0",
     "framer-motion": "^5.6.0",
+    "gh-pages": "^4.0.0",
     "iexec": "^7.2.1",
     "react": "^18.2.0",
     "react-bootstrap": "^2.4.0",
@@ -19,6 +22,7 @@
     "react-scripts": "5.0.1",
     "recharts": "^2.1.13",
     "recoil": "^0.7.4",
+    "save-dev": "^0.0.1-security",
     "uniqid": "^5.4.0",
     "unzipit": "^1.4.0",
     "web-vitals": "^2.1.4",
@@ -28,7 +32,9 @@
     "start": "react-app-rewired start",
     "build": "react-app-rewired build",
     "test": "react-app-rewired test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
