--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "predictme-web",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://predictme.github.io",
+  "homepage": ".",
   "dependencies": {
     "-": "^0.0.1",
     "@testing-library/jest-dom": "^5.16.4",
