--- a/package.json
+++ b/package.json
@@ -11,9 +11,14 @@
     "adm-zip": "^0.5.9",
     "bootstrap": "^5.2.0",
     "constants-browserify": "^1.0.0",
+    "encrypt-rsa": "^2.1.2",
     "framer-motion": "^5.6.0",
     "gh-pages": "^4.0.0",
     "iexec": "^7.2.1",
+    "jsencrypt": "^3.2.1",
+    "node-crypto-js": "^1.0.3",
+    "node-forge": "^1.3.1",
+    "quick-encrypt": "^1.0.8",
     "react": "^18.2.0",
     "react-bootstrap": "^2.4.0",
     "react-dom": "^18.2.0",
@@ -25,6 +30,7 @@
     "save-dev": "^0.0.1-security",
     "uniqid": "^5.4.0",
     "unzipit": "^1.4.0",
+    "ursa-purejs": "^0.0.3",
     "web-vitals": "^2.1.4",
     "web3": "^1.7.5"
   },
